# modpack-installer

./: CODE_OF_CONDUCT.md  LICENSE  README.md  index.html  package.json  tailwind.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  mrpack.rs  types.rs
src-tauri/src/mrpack/: modrinthpack.rs
src/api/: downloadModpack.ts  filesystem.ts  getMinecraftDirectory.ts  getModpacks.ts  isDirectory.ts  isMinecraftDirectory.ts  modpacks.ts  types.ts
src/components/: AlertBox.vue  DirectorySelector.vue  HelloWorld.vue  HomePage.vue  LoadingIcon.vue  ModpackSelector.vue
src/pages/: Confirmation.vue  DirectorySelector.vue  Finished.vue  HomePage.vue  Installing.vue  ModpackSelector.vue  Wrapper.vue
src/state/: modpackStore.ts
