[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "GPL-3.0"
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["api-all"] }
tokio = { version = "1.24.1", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json", "stream"] }
directories = "4.0"
chrono = "0.4"
futures-util = "0.3.25"
image = "0.24.5"
base64 = "0.21.0"
zip = "0.6.3"
anyhow = "1.0"
walkdir = "2.3.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
